# serhii_sorochynskyi_pixo_test

./: .env  .flake8  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: checking-pr.yml
docker/: Dockerfile.backend
src/: .coverage  config.py  module.py  test.db
src/alembic/versions/: 2025_04_24_1215-fcd3dbc2ac4a_added_products_table.py
src/app/: exception_handles.py  exceptions.py  server.py
src/models/: __init__.py  products.py
src/repositories/: product_repository.py
src/routers/: __init__.py  products_router.py
src/schemas/: products.py
src/tests/: conftest.py
src/tests/products/: test_creating_product.py
src/tests/users/: test_jwt_token.py  test_sign_in.py  test_sign_up.py
src/use_cases/products/: create_product.py  delete_product.py  get_one_product.py  get_product_list.py  statistic_products.py
src/use_cases/users/: create_user.py
var/postgres/: postmaster.pid
var/postgres/base/13511/: 1247  1249  1259  16384  16387  16389  16391  16398  16400  16401  16402  16404  16410  16411  16413  16414  2224  2579  2604  2606  2608  2610  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  (+2 more)
var/postgres/global/: 1260  pg_control  pg_internal.init
var/postgres/pg_stat_tmp/: db_0.stat  db_13511.stat  global.stat
